My commit practice text

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   <main id="main">
     <div id="title">
       Dr. Norman Borlaug
+      Dr. Ignatiuis kipngetich Cheruiyot
     </div>
 
     <figure id="img-div">
